# dui

./: Cargo.toml  README.ja.md  README.md  install.sh
.github/workflows/: release.yml
examples/: config.toml
src/: ansi.rs  app.rs  cli.rs  config.rs  docker.rs  lib.rs  main.rs  model.rs  ui.rs
tests/: docker_integration.rs
